src/app.css
* {
  margin: 0;
  padding: 0;
  font-family: inherit;
}

@font-face {
  font-family: 'OCRA';
  src: url("/fonts/OCRA.ttf") format('truetype');
}

html,  body {
  height: 100%;
  overflow: hidden;
}
body {
  font-family: "OCRA";
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
}

